@@ -1,3 +1,8 @@
+2004-07-22  Ray Strode  <rstrode@redhat.com>
+
+	* libgnomevfs/egg*.[ch]: sync up from libegg
+        (fixes bug 148182)
+
 2004-07-22  Christian Kellner <gicmo@gnome-de.org>
 
 	* modules/http-neon-method.c: Reordered some debugging
